--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,11 @@
-<footer>
-    <p>Created by <a href="http://paulpritz.com">Paul Pritz</p>
+<footer class="site-footer">
+    {{ site.description }}<br />
+
+    Using <a href="http://jekyllrb.com/">Jekyll</a>
+    {% if site.sourcecode %}
+     :: <a href="{{ site.sourcecode }}">Website source</a>
+    {% endif %}
+    {% if site.analytics.provider and page.analytics != false %}
+     :: Analytics by {{ site.analytics.provider }}
+    {% endif %}
 </footer>
